# python_project_template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.folder_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements-dev.txt  tox.ini
{{cookiecutter.folder_name}}/.github/workflows/: run_tests.yml
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
{{cookiecutter.project_name}}/tests/: conftest.py  test_default.py
